--- a/doc/old/README
+++ b/doc/old/README
@@ -1,4 +1,4 @@
-These are copies of [1], [2] and [3], and those may be more up-to-date.
+These are copies of [1], [2] and [3], and those may be more up to date.
 [1] https://www.mikrocontroller.net/articles/IRMP_auf_STM32_-_ein_USB_IR_Empf%C3%A4nger/Sender/Einschalter_mit_Wakeup-Timer
 [2] https://www.mikrocontroller.net/articles/IRMP_auf_STM32_-_Bauanleitung
 [3] https://www.mikrocontroller.net/articles/IRMP_auf_STM32_%E2%80%93_stark_vereinfachte_Bauanleitung#Motherboard-Test
