suitable for productive use

--- a/vdr-plugin-irmplirc/HISTORY
+++ b/vdr-plugin-irmplirc/HISTORY
@@ -4,3 +4,12 @@ VDR Plugin 'irmplirc' Revision History
 2025-06-25: Version 0.0.1
 
 - Initial revision.
+
+2025-07-09: Version 0.0.2
+
+- Further development
+
+2025-08-22: Version 0.0.3
+
+- Further development
+- suitable for productive use
