--- a/vdr-plugin-irmplirc/HISTORY
+++ b/vdr-plugin-irmplirc/HISTORY
@@ -14,7 +14,11 @@ VDR Plugin 'irmplirc' Revision History
 - Further development
 - suitable for productive use
 
-2025-10-10: Version 0.0.4
+2025-10-08: Version 0.0.4
 
 - implement thread to filter out config reports
 
+2025-10-08: Version 0.0.5
+
+- use shared buffer
+- use cString instead of uint64_t
