--- a/vdr-plugin-irmplirc/HISTORY
+++ b/vdr-plugin-irmplirc/HISTORY
@@ -22,3 +22,8 @@ VDR Plugin 'irmplirc' Revision History
 
 - use shared buffer
 - use cString instead of uint64_t
+
+2025-12-18: Version 0.0.6
+
+- remove repeat rate detection since it is now handled by IRMP
+- get timeout from receiver and rely on count
